--- a/src/chip/chip.scss
+++ b/src/chip/chip.scss
@@ -1,3 +1,5 @@
+@import '../color';
+
 :host {
   background-color: #e0e0e0;
   color: rgba(0, 0, 0, 0.87);
@@ -21,5 +23,14 @@
     box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2),
                 0 3px 4px 0 rgba(0, 0, 0, 0.14),
                 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+  }
+  &[color="primary"] {
+    @include bg-primary();
+  }
+  &[color="accent"] {
+    @include bg-accent();
+  }
+  &[color="warn"] {
+    @include bg-warn();
   }
 }
