feat(color): easier mixin for general case

--- a/src/chip/chip.scss
+++ b/src/chip/chip.scss
@@ -24,13 +24,5 @@
                 0 3px 4px 0 rgba(0, 0, 0, 0.14),
                 0 1px 8px 0 rgba(0, 0, 0, 0.12);
   }
-  &[color="primary"] {
-    @include bg-primary();
-  }
-  &[color="accent"] {
-    @include bg-accent();
-  }
-  &[color="warn"] {
-    @include bg-warn();
-  }
+  @include attr-color();
 }
