--- a/src/chip/chip.scss
+++ b/src/chip/chip.scss
@@ -17,12 +17,10 @@
   font-size: 13px;
   line-height: 18px;
 
-  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include attr-color();
+  @include shadow-transition();
 
   &[active] {
-    box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2),
-                0 3px 4px 0 rgba(0, 0, 0, 0.14),
-                0 1px 8px 0 rgba(0, 0, 0, 0.12);
+    @include shadow-only();
   }
-  @include attr-color();
 }
