--- a/src/resume/resume.scss
+++ b/src/resume/resume.scss
@@ -1,7 +1,12 @@
 :host {
-  display: block;
-  
-  alr-languages {
-    margin-top: 1rem;
+  display: flex;
+
+  aside {
+    flex: 0 0 35%;
+    margin-left: 1rem;
+
+    * + * {
+      margin-top: 1rem;
+    }
   }
 }
