style: use Raleway as main font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,10 +18,11 @@ body {
   box-sizing: border-box;
   background: #fafafa;
   font: {
-    family: Roboto;
-    size: 16px;
+    family: Raleway, sans-serif;
+    size: 14px;
   }
-  margin: 1rem auto;
+  margin: 0 auto;
   max-height: 297mm;
   max-width: 210mm;
+  padding: 1rem;
 }
