--- a/src/title/title.scss
+++ b/src/title/title.scss
@@ -3,7 +3,7 @@
 :host {
   display: block;
   font-size: 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: .5rem;
   overflow: hidden;
 
   @include attr-color();
