--- a/src/resume/resume.scss
+++ b/src/resume/resume.scss
@@ -1,9 +1,14 @@
 :host {
   display: flex;
+  margin: 0 auto;
+  max-height: 297mm;
+  max-width: 210mm;
+  padding: 1rem;
 
   alr-title {
     font-size: 2rem;
     text-align: center;
+    margin-bottom: 1rem;
   }
 
   aside {
