style: screen media styles

--- a/src/resume/resume.scss
+++ b/src/resume/resume.scss
@@ -1,4 +1,5 @@
 :host {
+  background-color: #fff;
   display: flex;
   margin: 0 auto;
   max-height: 297mm;
@@ -7,7 +8,7 @@
 
   alr-title {
     font-size: 2rem;
-    text-align: center;
+    text-align: right;
     margin-bottom: 1rem;
   }
 
