--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import './color/color';
+@import './shadow';
+
 body {
   --primary: #303f9f;
   --primary-light: #666ad1;
@@ -20,10 +23,19 @@ body {
     box-sizing: inherit;
   }
 
-  background: #fafafa;
+  background-color: $background;
   font: {
     family: Raleway, sans-serif;
     size: 14px;
   }
   margin: 0;
+
+  @media screen {
+    background-image: linear-gradient(180deg, var(--primary-light) 25%, $background 25%);
+
+    alr-resume {
+      @include shadow();
+      margin: 2rem auto;
+    }
+  }
 }
