style: move folders

--- a/src/chip/chip.scss
+++ b/src/chip/chip.scss
@@ -1,5 +1,5 @@
-@import '../color/color';
-@import '../shadow';
+@import '../styles/color';
+@import '../styles/shadow';
 
 :host {
   background-color: #e0e0e0;
