--- a/src/skills/skills.scss
+++ b/src/skills/skills.scss
@@ -4,9 +4,9 @@
   alr-card {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: center;
 
-    padding: 1rem;
+    padding: 24px 0.5rem;
 
     alr-title {
       width: 100%;
