feat(portrait): initial implementation

--- a/src/resume/resume.scss
+++ b/src/resume/resume.scss
@@ -1,30 +1,48 @@
+@import '../styles/shadow';
+@import '../styles/sizes';
+
 :host {
-  background-color: #fff;
   display: flex;
-  margin: 0 auto;
-  max-width: 210mm;
-  overflow: hidden;
-  padding: 2rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-  @media print {
-    max-height: 297mm;
-    padding: 4px;
-  }
+  alr-card {
+    background-color: #fff;
+    display: flex;
+    margin: $image-size + $font-size auto 4rem;
+    max-width: 210mm;
+    overflow: visible;
+    padding: 2rem;
+    position: relative;
 
-  alr-title {
-    font-size: 2rem;
-    text-align: right;
-    margin-bottom: 1rem;
-  }
+    alr-title {
+      font-size: 2rem;
+      text-align: right;
+      margin-bottom: 1rem;
+      
+      @media screen {
+        visibility: hidden;
+      }
+    }
 
-  aside {
-    $width: 40%;
-    flex: 0 0 $width;
-    max-width: $width;
-    margin-left: 1rem;
+    aside {
+      $width: 40%;
+      
+      flex: 0 0 $width;
+      max-width: $width;
+      margin-left: 1rem;
 
-    * + * {
-      margin-top: 1rem;
+      * + * {
+        margin-top: 1rem;
+      }
+    }
+
+    @media print {
+      box-shadow: none;
+      max-height: 297mm;
+      margin: 0;
+      padding: 4px;
     }
   }
 }
