--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,6 @@ body {
   margin: 0;
 
   @media screen {
-    background-image: linear-gradient(180deg, var(--primary-light) 30%, $background 30%);
+    background-image: linear-gradient(180deg, var(--primary) 0%, var(--primary-light) 30%, $background 30%);
   }
 }
