chore: update experience and skills

--- a/src/resume/resume.scss
+++ b/src/resume/resume.scss
@@ -73,6 +73,10 @@
       max-height: 297mm;
       margin: 0;
       padding: 4px;
+
+      aside {
+        max-width: 35%;
+      }
     }
   }
 }
