--- a/src/components/linkedin/linkedin.scss
+++ b/src/components/linkedin/linkedin.scss
@@ -1,6 +1,8 @@
 :host {
   display: inline-block;
 
+  background-color: #fff;
+  border-radius: 4px;
   fill: #0077b5;
   height: 32px;
   width: 32px;
