--- a/src/components/portrait/portrait.scss
+++ b/src/components/portrait/portrait.scss
@@ -27,25 +27,11 @@
 
   img {
     border-radius: 50%;
-    border: 4px solid #fff;
+    border: 4px solid var(--bg);
     height: $image-size;
     width: auto;
 
-    @include shadow();
-  }
-
-  alr-logo {
-    position: absolute;
-    bottom: $image-size / 2 + $font-size / 2;
-    left: $font-size * 1.25;
-
-    @media screen and (max-width: 500px) {
-      clip-path: inset(0 60% 0 0);
-    }
-
-    @media screen and (max-width: 720px) {
-      bottom: -$font-size * 7;
-    }
+    @include shadow-only();
   }
 
   @media print {
